--- a/dotfiles/i3/config
+++ b/dotfiles/i3/config
@@ -8,7 +8,7 @@ font xft:URWGothic-Book 9
 
 floating_modifier $mod
 
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 bindsym $mod+Shift+q kill
 
