Replace `oh-my-zsh` with `starship`

--- a/dotfiles/kitty/theme.conf
+++ b/dotfiles/kitty/theme.conf
@@ -61,8 +61,8 @@ color1 #ab4642
 color9 #ab4642
 
 #: green
-color2 #7E807E
-color10 #8D8F8D
+color2 #81d381
+color10 #63ad63
 
 #: yellow
 color3 #f7ca88
