--- a/dotfiles/kitty/common.conf
+++ b/dotfiles/kitty/common.conf
@@ -8,6 +8,7 @@ select_by_word_characters :@-./_~?&=%+#
 enable_audio_bell no
 shell_integration disabled
 scrollback_pager_history_size 256
+confirm_os_window_close 0
 
 sync_to_monitor no
 input_delay 1
