Fix some keybinds

--- a/dotfiles/kitty/common.conf
+++ b/dotfiles/kitty/common.conf
@@ -28,6 +28,11 @@ map kitty_mod+r load_config_file
 map kitty_mod+c copy_to_clipboard
 map kitty_mod+v paste_from_clipboard
 
+map ctrl+left send_text all \x1b\x62
+map ctrl+right send_text all \x1b\x66
+map ctrl+shift+left send_text all \x01
+map ctrl+shift+right send_text all \x05
+
 map kitty_mod+u scroll_page_up
 map kitty_mod+d scroll_page_down
 map kitty_mod+h show_scrollback
